--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
-<html>
+---
+layout: default
+title: 首页
+---
 
-<body>
-  <h1>zane</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+<h1>Zane</h1>
+<p>mail: <a href="dukeluozhx@gmail.com">dukeluozhx@gmail.com</a> | Tel: 6220789447 | area: NL，Rottedam</p>
 
-</html>
+<hr>
+
+<h2>Profile</h2>
+<p>
+  I'm a full-stack developer. <br>
+  I'm interested in finance, data analytics, and automation.<br>
+  My goal is to settle down in Rotterdam and continue learning new technologies.<br>
+</p>
+
+<hr>
+
+<h2>Educational background</h2>
+
+<h3>Master - Data Science</h3>
+<p>The University of Queensland | February 2020 - December 2021</p>
+<p>The course covers machine learning, data analysis, database and software engineering foundations.</p>
+
+<h3>Undergraduate - Software Engineering</h3>
+<p>Jinling Institute of Technology | September 2014 - June 2018</p>
+<p>Master programming basics, data structures and algorithms, and software development processes.</p>
+
+<hr>
+
+<h2>Work experience</h2>
+
+<h3>Business Analysis / Due Diligence</h3>
+<p>Industrial Bank of China | March 2022 - September 2025</p>
+<ul>
+  <li>Participate in the design, development and testing of cross-border funds collection systems</li>
+  <li>Participate in due diligence projects, organize and analyze financial information of corporate clients, and issue due diligence reports</li>
+  <li>Optimize workflows and automate report generation.</li>
+  <li>Participate in the design of online risk control models for small and micro enterprises</li>
+</ul>
+
+<hr>
+
+<h2>Skills</h2>
+<ul>
+<li>Front-end: HTML, CSS, JavaScript, React</li>
+<li>Back-end: Node.js, Express, Python, REST API</li>
+<li>Database: PostgreSQL, MongoDB, Data Modeling</li>
+<li>Tools and Deployment: Git/GitHub, Docker, Heroku</li>
+<li>Banking/Finance Applications: Report Automation, Risk Analysis, Due Diligence Support</li>
+</ul>
+<hr>
+
+<h2>项目</h2>
+
+<h3>量化选股策略回测系统</h3>
+<p>个人项目 | 2025</p>
+<ul>
+  <li>使用 Python 构建股票量化策略回测框架，实现短线高胜率、低回撤评估。</li>
+  <li>可视化策略表现，并生成自动报告。</li>
+</ul>
+
+<h3>中餐轻快餐店项目</h3>
+<p>个人创业 | 2025</p>
+<ul>
+  <li>在鹿特丹测试小规模中式陶瓷与DIY式饭盒市场。</li>
+  <li>设计模块化产品和品牌故事，分析市场和进口税务。</li>
+</ul>
+
+<hr>
+
+<h2>Hobbies</h2>
+<ul>
+<li>Basketball</li>
+<li>Travel and exploring multiple cultures</li>
+<li>Learning new technologies and automation tools</li>
+</ul>
